--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,6 +7,9 @@ font_size        13.0
 
 sync_to_monitor yes
 
+# cursor
+cursor_shape beam
+
 # bell
 window_alert_on_bell yes
 bell_on_tab          yes
