--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ font_family      Sauce Code Pro Semibold Nerd Font Complete Mono
 bold_font        Sauce Code Pro Bold Nerd Font Complete Mono
 italic_font      Sauce Code Pro Semibold Italic Nerd Font Complete Mono
 bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
-font_size        13.0
+font_size        12.0
 
 sync_to_monitor yes
 
@@ -26,6 +26,9 @@ background_opacity    0.8
 
 # Disable shell intergration
 no-prompt-mark
+
+# new tab without shift
+map ctrl+t new_tab
 
 # Color scheme
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda
