--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,10 @@
+# Kitty's website for config options:
+# https://sw.kovidgoyal.net/kitty/conf
+
+
+###########
+# Display #
+###########
 # font
 font_family      Sauce Code Pro Semibold Nerd Font Complete Mono
 bold_font        Sauce Code Pro Bold Nerd Font Complete Mono
@@ -10,27 +17,56 @@ sync_to_monitor yes
 # cursor
 cursor_shape beam
 
-# bell
-window_alert_on_bell yes
-bell_on_tab          yes
-command_on_bell      notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=utilities-terminal
-enable_audio_bell    no
-
 # window
 remember_window_size  no
-initial_window_width  100c
-initial_window_height 23c
+initial_window_width  110c
+initial_window_height 26c
 window_border_width   0pt
 
 background_opacity    0.8
 
+# Tab bar
+tab_bar_edge          top
+
+tab_bar_style         powerline
+tab_powerline_style   angled
+tab_title_template    "{sup.index} {fmt.fg._fff}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+
+active_tab_font_style italic
+active_tab_foreground #ff00ea
+inactive_tab_foreground #700868
+inactive_tab_background #999
+
+
+#####################
+# Notification bell #
+#####################
+window_alert_on_bell yes
+bell_on_tab          " "
+command_on_bell      notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=utilities-terminal
+enable_audio_bell    no
+
+
+###############
+# Keybindings #
+###############
+# New tab without shift
+map ctrl+t new_tab
+
+
+########
+# Misc #
+########
 # Disable shell intergration
 no-prompt-mark
 
-# new tab without shift
-map ctrl+t new_tab
+# Paste
+strip_trailing_spaces smart
 
-# Color scheme
+
+################
+# Color scheme #
+################
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda
 # Dracula
 #background #1e1f28
