More misc changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -58,7 +58,7 @@ map ctrl+t new_tab
 # Misc #
 ########
 # Disable shell intergration
-no-prompt-mark
+#no-prompt-mark
 
 # Paste
 strip_trailing_spaces smart
