--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -45,7 +45,7 @@
   "dart.env": {
     "CHROME_EXCUTABLE": "/usr/bin/google-chrome-stable"
   },
-  "workbench.colorTheme": "Palenight (Mild Contrast)",
+  "workbench.colorTheme": "Monokai Dimmed",
   "gitProjectManager.baseProjectsFolders": [
     "~/nerd-stuff"
   ],
