--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -32,9 +32,10 @@ tab_bar_style         powerline
 tab_powerline_style   angled
 tab_title_template    "{sup.index} {fmt.fg._fff}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
 
-active_tab_font_style italic
-active_tab_foreground #ff00ea
-inactive_tab_foreground #700868
+active_tab_font_style bold
+active_tab_foreground #000
+inactive_tab_font_style normal
+inactive_tab_foreground #555
 inactive_tab_background #999
 
 
@@ -63,6 +64,8 @@ map ctrl+t new_tab
 # Paste
 strip_trailing_spaces smart
 
+# Browser
+open_url_with default
 
 ################
 # Color scheme #
