--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,11 +1,11 @@
 format = "$character"
 
 right_format = "$all$time$sudo"
-continuation_prompt = " »»"
+continuation_prompt = "   "
 
 [character]
-success_symbol = "[ »»](bold green)"
-error_symbol = "[ »»](bold red)"
+success_symbol = "[  ](bold green)"
+error_symbol = "[  ](bold red)"
 
 # modules
 [status]
