--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,6 +18,7 @@ sync_to_monitor yes
 cursor_shape beam
 
 # window
+wayland_titlebar_color black
 remember_window_size  no
 initial_window_width  110c
 initial_window_height 26c
