--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -1,13 +1,13 @@
 ### Video
 profile=gpu-hq
-gpu-api=vulkan
 dither-depth=auto
-scaler-resizes-only=no
+hwdec=auto
+vo=gpu
+gpu-api=vulkan
 
 ### Audio
+ao=pulse
 alang='jpn,jp,eng,en'
-volume=100
-volume-max=100
 
 ### Interface
 # Subtitles
@@ -15,11 +15,7 @@ slang='eng,en,enUS'
 sub-auto=fuzzy
 
 # OSD
-no-keepaspect-window
-script-opts=osc-vidscale=no
-no-osd-bar
 osd-font='Google Sans'
-osc=no
 
 ### Playback
 save-position-on-quit
