--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -5,6 +5,10 @@ hwdec=auto
 vo=gpu
 gpu-api=vulkan
 
+### screenshots
+screenshot-format=png
+screenshot-png-compression=0
+
 ### Audio
 ao=pulse
 alang='jpn,jp,eng,en'
