--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,10 +13,10 @@ include current-theme.conf
 # Display #
 ###########
 # font
-font_family      SauceCodePro NF SemiBold
-bold_font        SauceCodePro NF Bold
-italic_font      SauceCodePro NF SemiBold Italic
-bold_italic_font SauceCodePro NF Bold Italic
+font_family      SauceCodePro Nerd Font SemiBold
+bold_font        SauceCodePro Nerd Font Bold
+italic_font      SauceCodePro Nerd Font SemiBold Italic
+bold_italic_font SauceCodePro Nerd Font Bold Italic
 font_size        12.0
 
 sync_to_monitor yes
