--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,10 +13,10 @@ include current-theme.conf
 # Display #
 ###########
 # font
-font_family      SauceCodePro Nerd Font SemiBold
-bold_font        SauceCodePro Nerd Font Bold
-italic_font      SauceCodePro Nerd Font SemiBold Italic
-bold_italic_font SauceCodePro Nerd Font Bold Italic
+font_family      Sauce Code Pro SemiBold Nerd Font Complete
+bold_font        Sauce Code Pro Bold Nerd Font Complete
+italic_font      Sauce Code Pro SemiBold Italic Nerd Font Complete
+bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete
 font_size        12.0
 
 sync_to_monitor yes
