--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,10 +13,10 @@ include current-theme.conf
 # Display #
 ###########
 # font
-font_family      SauceCodePro NFM SemiBold
-bold_font        SauceCodePro NFM Bold
-italic_font      SauceCodePro NFM SemiBold Italic
-bold_italic_font SauceCodePro NFM Bold Italic
+font_family      Sauce Code Pro Semibold Nerd Font Complete Mono
+bold_font        Sauce Code Pro Bold Nerd Font Complete Mono
+italic_font      Sauce Code Pro SemiBold Italic Nerd Font Complete Mono
+bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
 font_size        12.0
 
 sync_to_monitor yes
