change kitty theme to tmr-night

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -67,3 +67,9 @@ strip_trailing_spaces smart
 # Browser
 open_url_with default
 
+
+
+# BEGIN_KITTY_THEME
+# Tomorrow Night
+include current-theme.conf
+# END_KITTY_THEME
