--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #########
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda, Dracula
 include current-theme.conf
-
+background_opacity         0.95
 
 ###########
 # Display #
@@ -25,18 +25,21 @@ sync_to_monitor yes
 cursor_shape beam
 
 # window
-# wayland_titlebar_color white
-remember_window_size  no
-initial_window_width  110c
-initial_window_height 26c
-window_border_width   0pt
+wayland_titlebar_color    black
+# hide_window_decorations yes
+draw_minimal_borders      yes
+remember_window_size      no
+initial_window_width      110c
+initial_window_height     26c
+window_border_width       0pt
 
 # Tab bar
-tab_bar_edge          bottom
+tab_bar_edge          top
+tab_bar_min_tabs      1
 tab_bar_style         powerline
-tab_powerline_style   slanted
+tab_powerline_style   round
 tab_title_template    {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-active_tab_font_style bold
+active_tab_font_style Bold
 
 
 #####################
@@ -67,9 +70,3 @@ strip_trailing_spaces smart
 # Browser
 open_url_with default
 
-
-
-# BEGIN_KITTY_THEME
-# Tomorrow Night
-include current-theme.conf
-# END_KITTY_THEME
