Add screenshot path for MPV

--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -8,6 +8,7 @@ vo=gpu
 ### screenshots
 screenshot-format=png
 screenshot-png-compression=0
+screenshot-dir='~/Pictures/mpv/'
 
 ### Audio
 ao=pulse
