--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,36 +6,39 @@
 # Theme #
 #########
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda, Dracula
-include current-theme.conf
-background_opacity         0.95
+include   current-theme.conf
+background_opacity         1
+
 
 ###########
 # Display #
 ###########
 # font
-font_family      Sauce Code Pro Semibold Nerd Font Complete Mono
-bold_font        Sauce Code Pro Bold Nerd Font Complete Mono
-italic_font      Sauce Code Pro SemiBold Italic Nerd Font Complete Mono
-bold_italic_font Sauce Code Pro Bold Italic Nerd Font Complete Mono
-font_size        12.0
+font_family      Mononoki Nerd Font
+modify_font      cell_height 6px
+font_size        13.0
 
-sync_to_monitor yes
+# reduce input latency
+sync_to_monitor no
+input_delay 0
 
 # cursor
 cursor_shape beam
+cursor_blink_interval 0.5 ease-in-out
 
 # window
-wayland_titlebar_color    black
-# hide_window_decorations yes
-draw_minimal_borders      yes
+# wayland_titlebar_color  black
+hide_window_decorations   yes
+draw_minimal_borders      no
 remember_window_size      no
-initial_window_width      110c
-initial_window_height     26c
+initial_window_width      130c
+initial_window_height     25c
+window_padding_width      1
 window_border_width       0pt
 
 # Tab bar
-tab_bar_edge          top
-tab_bar_min_tabs      1
+tab_bar_edge          bottom
+#tab_bar_min_tabs     1
 tab_bar_style         powerline
 tab_powerline_style   round
 tab_title_template    {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
@@ -55,7 +58,7 @@ enable_audio_bell    no
 # Keybindings #
 ###############
 # New tab without shift
-map ctrl+t new_tab
+map ctrl+t new_tab_with_cwd
 
 
 ########
@@ -69,4 +72,3 @@ strip_trailing_spaces smart
 
 # Browser
 open_url_with default
-
