--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -2,11 +2,12 @@
 profile=gpu-hq
 dither-depth=auto
 hwdec=auto
-vo=gpu
-# gpu-api=vulkan
+vo=gpu-next
+gpu-api=vulkan
+video=auto
 
 ### screenshots
-screenshot-format=png
+screenshot-format=webp
 screenshot-png-compression=0
 screenshot-dir='~/Pictures/mpv/'
 
