--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,14 +2,15 @@
 theme = catppuccin-frappe
 
 # font
-font-family = "Mononoki Nerd Font"
-adjust-cell-height = "40%"
+font-family = Mononoki Nerd Font
+font-size = 11
+adjust-cell-height = 40%
 
 # window
-window-width = "130"
+window-width = "150"
 window-height = "25"
 
-window-decoration = "false"
+window-decoration = none
 
 # keybinds
 keybind = ctrl+t=new_tab
