kitty cursor trail

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 # Kitty's website for config options:
 # https://sw.kovidgoyal.net/kitty/conf
 
+# reload with ctrl+shift+f5
+
 
 #########
 # Theme #
@@ -25,6 +27,9 @@ input_delay 0
 # cursor
 cursor_shape beam
 cursor_blink_interval 0.5 ease-in-out
+cursor_trail 1
+cursor_trail_decay 0.1 0.2
+cursor_trail_start_threshold 0
 
 # window
 # wayland_titlebar_color  black
