--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,8 +8,8 @@
 # Theme #
 #########
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda, Dracula
-include   current-theme.conf
-background_opacity         1
+include             themes/Rosé Pine Dawn.conf
+background_opacity  1
 
 
 ###########
@@ -17,46 +17,46 @@ background_opacity         1
 ###########
 # font
 font_family      Mononoki Nerd Font
-modify_font      cell_height 6px
 font_size        13.0
+#modify_font     cell_height 6px
 
 # reduce input latency
-sync_to_monitor no
-input_delay 0
+sync_to_monitor  no
+input_delay      0
 
 # cursor
-cursor_shape beam
-cursor_blink_interval 0.5 ease-in-out
-cursor_trail 1
-cursor_trail_decay 0.1 0.2
-cursor_trail_start_threshold 0
+cursor_shape                  beam
+cursor_blink_interval         0.4 linear
+cursor_trail                  1
+cursor_trail_decay            0.1 0.2
+cursor_trail_start_threshold  0
 
 # window
-# wayland_titlebar_color  black
+#wayland_titlebar_color   black
 hide_window_decorations   yes
 draw_minimal_borders      no
 remember_window_size      no
-initial_window_width      130c
-initial_window_height     25c
+initial_window_width      110c
+initial_window_height     30c
 window_padding_width      1
 window_border_width       0pt
 
 # Tab bar
-tab_bar_edge          bottom
-#tab_bar_min_tabs     1
-tab_bar_style         powerline
-tab_powerline_style   round
-tab_title_template    {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-active_tab_font_style Bold
+tab_bar_edge           bottom
+tab_bar_min_tabs       1
+tab_bar_style          fade
+tab_bar_align          center
+#tab_powerline_style   round
+active_tab_font_style  Bold
 
 
 #####################
 # Notification bell #
 #####################
-window_alert_on_bell yes
-bell_on_tab          " "
-command_on_bell      notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=utilities-terminal
-enable_audio_bell    no
+window_alert_on_bell  yes
+bell_on_tab           " "
+command_on_bell       notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=utilities-terminal
+enable_audio_bell     no
 
 
 ###############
