--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -1,10 +1,14 @@
 ### Video
 profile=gpu-hq
 dither-depth=auto
-hwdec=auto
+hwdec=auto-copy
 vo=gpu-next
-gpu-api=vulkan
-video=auto
+vid=auto
+
+### cache
+demuxer-seekable-cache=yes
+demuxer-readahead-secs=120
+demuxer-max-bytes=3GiB
 
 ### screenshots
 screenshot-format=webp
@@ -30,3 +34,9 @@ ignore-path-in-watch-later-config
 ### ytdl
 ytdl-format=bestvideo[height<=?1080]+bestaudio/best # Set max streaming quality as 1080p.
 force-seekable=yes
+
+### cache
+[cache]
+profile-cond=demuxer_via_network
+demuxer-seekable-cache=no
+
