--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -65,6 +65,12 @@ enable_audio_bell     no
 # New tab without shift
 map ctrl+t new_tab_with_cwd
 
+# numpad keys
+map ctrl+shift+kp_page_up scroll_page_up
+map ctrl+shift+kp_page_down scroll_page_down
+map ctrl+shift+kp_home scroll_home
+map ctrl+shift+kp_end scroll_end
+
 
 ########
 # Misc #
