--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -71,6 +71,8 @@ map ctrl+shift+kp_page_down scroll_page_down
 map ctrl+shift+kp_home scroll_home
 map ctrl+shift+kp_end scroll_end
 
+# unmap defaults
+map ctrl+shift+l
 
 ########
 # Misc #
