feat: switch to niri

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,8 +8,8 @@
 # Theme #
 #########
 # Options: Base16 Bright, Base16 Atelier Cave, Monokai Soda, Dracula
-include             themes/Rosé Pine Dawn.conf
-background_opacity  1
+include             themes/nightcord.conf
+background_opacity  0.8
 
 
 ###########
