--- a/.config/systemd/user/notes-hourly-sync.service
+++ b/.config/systemd/user/notes-hourly-sync.service
@@ -3,4 +3,4 @@ Description=Notes - sync git repo every 3 hours
 
 [Service]
 Type=oneshot
-ExecStart=%h/nerd-stuff/notes/scripts/sync.sh
+ExecStart=%h/nerd-stuff/notes/scripts/sync.fish
