--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -48,7 +48,8 @@
         "format-ethernet": "{ipaddr}/{cidr}  ",
         "tooltip-format": "{ifname} via {gwaddr}  ",
         "format-linked": "{ifname} (No IP)  ",
-        "format-disconnected": "Disconnected ⚠ "
+        "format-disconnected": "Disconnected ⚠ ",
+        "on-click": "kitty nmtui"
     },
 
     "backlight": {
