--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -13,6 +13,8 @@ line-height=20
 
 [colors]
 background=242434ff
+prompt=657b83ff
+placeholder=4C4C4Cff
 text=CDD6F4ff
 match=8be9fdff
 selection-match=8be9fdff
