--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,6 +1,6 @@
-font=monofoki nerd font
+font=Caveat:size=14
 
-prompt="  "
+prompt=">  "
 placeholder="search for..."
 hide-before-typing=yes
 
@@ -12,15 +12,15 @@ inner-pad=10
 line-height=20
 
 [colors]
-background=242434ff
+background=000000dd
 prompt=657b83ff
 placeholder=4C4C4Cff
 text=CDD6F4ff
 match=8be9fdff
 selection-match=8be9fdff
-selection=44475add
+selection=00000055
 selection-text=f8f8f2ff
-border=bd93f9ff
+border=00000000
 
 [border]
 width=0
