--- a/.config/walker/config.toml
+++ b/.config/walker/config.toml
@@ -1,6 +1,10 @@
 theme = "mizukitty"
 hotreload_theme = true
 
+# for debugging
+# close_when_open = false
+# as_window = true
+
 [list]
 max_entries = 5
 placeholder = ">.<"
