--- a/.config/walker/themes/mizukitty.toml
+++ b/.config/walker/themes/mizukitty.toml
@@ -56,7 +56,7 @@ y_align = 0
 wrap = true
 
 [ui.window.box.scroll.list]
-marker_color = "#1BFFE1"
+marker_color = "#F7CEF3"
 max_height = 300
 max_width = 400
 min_width = 400
