--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -51,7 +51,8 @@
     },
 
     "network": {
-        "format-wifi": "{essid}  ",
+        // "format-wifi": "{essid}  ",
+        "format-wifi": "Redmi  ",
         "format-ethernet": "{ipaddr}/{cidr}  ",
         "tooltip-format": "{ifname} via {gwaddr}  ",
         "format-linked": "{ifname} (No IP)  ",
