--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -62,7 +62,6 @@ enable_audio_bell     no
 ###############
 # Keybindings #
 ###############
-# New tab without shift
 map ctrl+t new_tab_with_cwd
 
 # numpad keys
@@ -73,6 +72,9 @@ map ctrl+shift+kp_end scroll_end
 
 # unmap defaults
 map ctrl+shift+l
+
+# don't really need this with fish shell actually
+map ctrl+v paste_from_clipboard
 
 ########
 # Misc #
