--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,22 +1,32 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
-format = "$character"
-right_format = "$all"
+format = """
+[ ┍━━━━━](bright-purple) $all\
+[ │](bright-purple)
+[ ╰┈](bright-purple)$character """
+
+right_format = "[♡ ✧･ﾟ: *✧･ﾟ:* ](bright-purple)"
 
 [character]
-format = " $symbol "
-success_symbol = "[](green)"
-error_symbol = "[](red)"
+format = "$symbol"
+success_symbol = "[➤](bright-purple)"
+error_symbol = "[➤](bright-red)"
 
 [git_commit]
 tag_symbol = " tag "
 
 [git_status]
-ahead = ">"
-behind = "<"
-diverged = "<>"
-renamed = "r"
-deleted = "x"
+format = "[$all_status$ahead_behind]($style) "
+style = "bold bright-yellow"
+ahead = "⇡${count}"
+behind = "⇣${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+renamed = "ʀ"
+deleted = "✕"
+modified = "!"
+staged = "+"
+untracked = "?"
+conflicted = "≋"
 
 [aws]
 symbol = "aws "
